Fixed hero margins on Firefox

--- a/src/Components/Components/ContactForm/ContactForm.scss
+++ b/src/Components/Components/ContactForm/ContactForm.scss
@@ -151,6 +151,7 @@
             .form-result {
                 color: var(--light-color);
                 margin: .5rem 0 1rem;
+                height: 2.5rem;
                 font-weight: 750;
                 color: var(--accentcolor);
                 text-shadow: 0 0 3px #000;
